refactor!: strip dependencies, code cleanup